--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,17 @@
 {
   "compilerOptions": {
-    "alwaysStrict": false,
-    "noImplicitUseStrict": true,
-    "noImplicitAny": false
+    "allowJs": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "inlineSourceMap": true,
+    "isolatedModules": true,
+    "jsx": "react",
+    "lib": [
+      "deno.window"
+    ],
+    "module": "esnext",
+    "strict": true,
+    "target": "esnext",
+    "useDefineForClassFields": true
   }
 }
