--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,11 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "esModuleInterop": true,
     "experimentalDecorators": true,
-    "inlineSourceMap": true,
-    "isolatedModules": true,
     "jsx": "react",
     "lib": [
       "deno.window"
     ],
-    "module": "esnext",
-    "strict": true,
-    "target": "esnext",
-    "useDefineForClassFields": true
+    "strict": true
   }
 }
