now validates all relevant schemas

--- a/schemas/axon.yaml
+++ b/schemas/axon.yaml
@@ -9,7 +9,7 @@
   description: ["Uniquely identifiable string", Description]
 
 - id: Axon/Thing
-  schema: "#Axon/c/Thing"
+  schema: "#Axon/Thing"
 
 # Plugins
 - id: Axon/Plugin
